--- a/cpp/nbody/nbody/nbody.vcxproj
+++ b/cpp/nbody/nbody/nbody.vcxproj
@@ -145,6 +145,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="SimBody.h" />
+    <ClInclude Include="SimBodyManager.h" />
     <ClInclude Include="SimManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -152,6 +154,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="nbody.cpp" />
+    <ClCompile Include="SimBody.cpp" />
+    <ClCompile Include="SimBodyManager.cpp" />
     <ClCompile Include="SimManager.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
