--- a/cpp/nbody/nbody/nbody.vcxproj
+++ b/cpp/nbody/nbody/nbody.vcxproj
@@ -156,6 +156,8 @@
     <ClInclude Include="SimManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TimedInterval.h" />
+    <ClInclude Include="TimeProfiler.h" />
     <ClInclude Include="Vec3.h" />
   </ItemGroup>
   <ItemGroup>
@@ -171,6 +173,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TimedInterval.cpp" />
+    <ClCompile Include="TimeProfiler.cpp" />
     <ClCompile Include="Vec3.cpp" />
   </ItemGroup>
   <ItemGroup>
